# ControlServer

./: README.md
CppSQLite3/: CppSQLite3.cpp
controlServer/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
controlServer/autom4te.cache/: output.0  output.1  traces.0  traces.1
controlServer/script/: makecommon.sh
controlServer/src/: Makefile  Makefile.am  Makefile.in  config.h  config.status  libtool
controlServer/src/controlDB/: CCtrlDBHandler.cpp  CServerInfoTable.cpp  CStorageUnitInfoTable.cpp  CTableHandler.cpp  CVirtualDiskInfoTable.cpp  CppSQLite3.cpp  Makefile.am  Makefile.in
controlServer/src/ctrlCommon/: ChangeVDSumCapTask.cpp  ControlAgent.cpp  GetSUCapacityInfoTask.cpp  GetSUCapacityInfoWorkItem.cpp  GetServerInfoTask.cpp  GetSysCapInfoWorkItem.cpp  GetSysCapacityInfoTask.cpp  GetVDCapacityInfoTask.cpp  GetVDCapacityInfoWorkItem.cpp  Makefile.am  Makefile.in  Makefile_for_lib.am  ManageServerCreateBatchVDTask.cpp  ManageServerCreateOneVDTask.cpp  ManageServerCreateVDTask.cpp  ManageServerDeleteBatchVDTask.cpp  ManageServerDeleteOneVDTask.cpp  ManageServerDeleteVDTask.cpp  MultiMsgDeserializer.cpp  MultiMsgSerializer.cpp  RecvVDDeleteResTask.cpp  RecvVDFormatResTask.cpp  RecvVDLocateNodeInfoTask.cpp  RecvVDSumFormatCapChangeResTask.cpp  RegisterServerInfoTask.cpp  RegisterWorkItem.cpp  SetNodeCapInfoWorkItem.cpp  SetNodeCapacityInfoTask.cpp  SetVDInfoWorkItem.cpp  server.cpp
controlServer/test/: BatchDeleteACKMsgTester.cpp  BatchDeleteMsgTester.cpp  Makefile  ManageServerCreateBatchVDACKMessageTester.cpp  ManageServerCreateBatchVDMessageTester.cpp  a.out  main  testtt.cpp
controlServer/test_exec/: CCtrlAgentTester.cpp  Makefile  main
controlServerTestCient/LocateServer/: GetSUCapacityInfoMessage.h  ManageServerCreateVDMessage.h  MasterAgent.cpp  MessageID.h  MessageSerializer.h  MultiMsgSerializer.h  NodeCapacityInfoMessage.h  client.cpp  configure.ac
controlServerTestCient/ManageServer/: GetServerInfoTask.h  GetSysCapMessage.h  ManageServerCreateBatchVDMessage.h  ManageServerDeleteBatchVDMessage.h  MasterAgent.cpp  MasterAgent.h  client.cpp  configure
controlServerTestCient/SU1Server/: GetServerInfoWorkItem.cpp  GetServerInfoWorkIten.h  Makefile.am  Makefile.in  MasterAgent.cpp  Message.h  MessageDeserializer.h  MultiMsgDeserializer.cpp  MultiMsgDeserializer.h  MultiMsgSerializer.cpp  VirtualDiskDeleteMessage.h  (+3 more)
(+79 files in other folders)
